<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TitleTextView"
            android:text="@string/web_services" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNumeroControl"
                android:hint="@string/control_number"
                style="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuscar"
            android:text="@string/search_student"
            style="@style/PrimaryButton" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:hint="@string/name"
                style="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtApellidoPaterno"
                android:hint="@string/father_lastname"
                style="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtApellidoMaterno"
                android:hint="@string/mother_lastname"
                style="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLimpiar"
            android:text="@string/clear_fields"
            style="@style/PrimaryButton" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalir"
        style="@style/SecondaryButton"
        android:layout_marginBottom="16dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>